fixed janky reveal on firefox

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -13,10 +13,10 @@
 .fadein {
 	animation-name: fadein;
 	animation-duration: 0.5s;
-	transform: translateY(0);
+	transform: none;
 }
 
 @keyframes fadein {
-	from {opacity: 0; transform: translateY(0);}
-	to {opacity: 1;}
+	from {opacity: 0; }
+	to {opacity: 1; }
 }
